--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.9",
-    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "gulp": "^3.9.1",
     "gulp-less": "^3.3.2",
@@ -28,8 +28,9 @@
     "node-fetch": "^1.7.3",
     "nunjucks": "^3.0.1",
     "preact": "^8.2.5",
+    "preact-compat": "^3.17.0",
     "qs": "^6.5.1",
-    "vue": "^2.5.2",
+    "react-router-dom": "^4.2.2",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
