--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
-    "eslint": "^4.9.0"
+    "eslint": "^4.9.0",
+    "eslint-plugin-react": "^7.4.0"
   }
 }
