--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "bcrypt": "^1.0.3",
@@ -29,12 +30,18 @@
     "nunjucks": "^3.0.1",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
+    "prop-types": "^15.6.0",
     "qs": "^6.5.1",
     "react-router-dom": "^4.2.2",
-    "webpack": "^3.8.1"
+    "showdown": "^1.8.1",
+    "webpack": "^3.8.1",
+    "xss": "^0.3.4"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
     "eslint-plugin-react": "^7.4.0"
+  },
+  "engines": {
+    "node": ">=8.9.0"
   }
 }
