--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "devDependencies": {
     "eslint": "^4.9.0",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-react": "^7.4.0",
+    "stylelint-config-standard": "^17.0.0"
   },
   "engines": {
     "node": ">=8.9.0"
