--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,7 +52,7 @@ http {
         add_header Strict-Transport-Security "max-age=31536000" always;
 
         location / {
-            proxy_pass http://172.17.0.1:9090;
+            proxy_pass http://node:9090;
             proxy_http_version 1.1;
             proxy_pass_header Server;
         }
