--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,8 @@
-version: '3.1'
+version: '3'
 services:
-  web:
-    image: nginx
-    volumes:
-     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-     - ./site.key:/run/secrets/site.key
-     - ./site.crt:/run/secrets/site.crt
-    ports:
-     - "443:443"
-     - "80:80"
-    command: nginx -g 'daemon off;'
   node:
     build:
       context: .
+    env_file:
+      - ./.env
+    network_mode: "host"
